--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </style>
 
 <div class="contact-info">
-  <p class="contact-title">Recenzie</p>
+  <p class="contact-title">testimonials</p>
   <address>
     <a href="https://docs.google.com/forms" class="review-link">
       Napísať recenziu
@@ -309,25 +309,25 @@
 
 
         <!--
-          - recenzie
+          - testimonials
         -->
 
-        <section class="recenzie">
+        <section class="testimonials">
 
-          <h3 class="h3 recenzie-title">Recenzie</h3>
+          <h3 class="h3 testimonials-title">testimonials</h3>
 
-          <ul class="recenzie-list has-scrollbar">
+          <ul class="testimonials-list has-scrollbar">
 
-            <li class="recenzie-item">
-              <div class="content-card" data-recenzie-item>
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-                <figure class="recenzie-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-recenzie-avatar>
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 recenzie-item-title" data-recenzie-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
 
-                <div class="recenzie-text" data-recenzie-text>
+                <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac pulvinar mauris. Fusce aliquam nisi non justo eleifend, sagittis egestas augue ullamcorper. Morbi quis vulputate elit. Morbi rutrum vel mi in iaculis. Phasellus ornare laoreet arcu. Donec placerat dolor vel orci porta luctus. Duis sit amet consectetur magna, non dictum purus. Proin consequat non ipsum ut pellentesque.
                   </p>
@@ -335,16 +335,16 @@
               </div>
             </li>
 
-            <li class="recenzie-item">
-              <div class="content-card" data-recenzie-item>
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-                <figure class="recenzie-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-recenzie-avatar>
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 recenzie-item-title" data-recenzie-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
 
-                <div class="recenzie-text" data-recenzie-text>
+                <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
@@ -357,16 +357,16 @@
               </div>
             </li>
 
-            <li class="recenzie-item">
-              <div class="content-card" data-recenzie-item>
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-                <figure class="recenzie-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-recenzie-avatar>
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 recenzie-item-title" data-recenzie-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
 
-                <div class="recenzie-text" data-recenzie-text>
+                <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
@@ -379,16 +379,16 @@
               </div>
             </li>
 
-            <li class="recenzie-item">
-              <div class="content-card" data-recenzie-item>
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-                <figure class="recenzie-avatar-box">
-                  <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-recenzie-avatar>
+                <figure class="testimonials-avatar-box">
+                  <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 recenzie-item-title" data-recenzie-title>Henry william</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
 
-                <div class="recenzie-text" data-recenzie-text>
+                <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
@@ -407,14 +407,14 @@
 
 
         <!--
-          - recenzie modal
+          - testimonials modal
         -->
 
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
-          <section class="recenzie-modal">
+          <section class="testimonials-modal">
 
             <button class="modal-close-btn" data-modal-close-btn>
               <ion-icon name="close-outline"></ion-icon>
