--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
 
 
         <!--
-          - testimonials
+          - recenzie
         -->
 
-        <section class="testimonials">
+        <section class="recenzie">
 
           <h3 class="h3 testimonials-title">testimonials</h3>
 
