--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
           - recenzie
         -->
 
-        <section class="recenzie">
+        <section class="testimonials">
 
-          <h3 class="h3 testimonials-title">testimonials</h3>
+          <h3 class="h3 testimonials-title">recenzie</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
